--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
     <h1>Changelog</h1>
     <p class="subtitle">Voici tout ce que nous avons publié ces derniers jours</p>
 
-    <div class="timeline">
+   <div class="timeline">
+  <div class="timeline-item">
+    <span class="date">September 3, 2024</span>
+    <div class="dot"></div>
+    <p class="text">Announcing Projects on Frontend Roadmap</p>
+  </div>
 
-        <div class="item">
-            <p class="date">3 septembre 2024</p>
-            <p class="title">Annonce des projets sur la feuille de route
+  <div class="timeline-item">
+    <span class="date">August 28, 2024</span>
+    <div class="dot"></div>
+    <p class="text">Build your learning habits with learning streaks</p>
+  </div>
+</div></div>
